fix(bank-transactions): install packages & fix scrollbar

--- a/src/app/features/shared/components/bank-transactions/bank-transactions.component.scss
+++ b/src/app/features/shared/components/bank-transactions/bank-transactions.component.scss
@@ -1,8 +1,10 @@
 @import './index.scss';
+
+.main-wrapper {
+  padding: 28px;
+}
+
 .bank-transactions {
-  width: 95%;
-  margin: auto;
-  margin-top: 28px;
   background-color: white;
 
   .myDiv {
@@ -73,15 +75,11 @@
           height: 80%;
         }
         ::ng-deep .dropdown-general .selected {
-          // width: 85%;
           border: none;
         }
         ::ng-deep .mat-form-field {
           margin-top: -7px;
           width: 150px;
-        }
-        ::ng-deep .dropdown-general .selected .arrow-container {
-          color: #555c64;
         }
         .dropdown-general {
           width: 85%;
@@ -119,7 +117,6 @@
     padding: 10px 23px 9px 23px;
 
     img {
-      margin-right: 1.2%;
       height: 40px;
       width: 80px;
       margin: auto;
